--- a/src/main/resources/templates/administration/users/addUser.html
+++ b/src/main/resources/templates/administration/users/addUser.html
@@ -1,85 +1,105 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Elective</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-        crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Elective</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+          crossorigin="anonymous">
+
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-  <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-    <ul class="navbar-nav">
-      <div sec:authorize="isAuthenticated()">
-        <a class="nav-link me-2" th:href="@{/logout}">Log out</a>
-      </div>
-      <div class="d-flex flex-row" sec:authorize="isAnonymous()">
-        <a class="nav-link" th:href="@{/login}">Log in</a>
-        <a class="nav-link me-2" th:href="@{/register}">Sign up</a>
-      </div>
-    </ul>
-  </div>
+    <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <div sec:authorize="isAuthenticated()">
+                <a class="nav-link me-2" th:href="@{/logout}">Log out</a>
+            </div>
+            <div class="d-flex flex-row" sec:authorize="isAnonymous()">
+                <a class="nav-link" th:href="@{/login}">Log in</a>
+                <a class="nav-link me-2" th:href="@{/register}">Sign up</a>
+            </div>
+        </ul>
+    </div>
 </nav>
 
 <br>
 
 <div class="container">
-  <div class="row mt-5">
-    <div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-      <div class="row">
+    <div class="row mt-5">
+        <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+            <div class="row">
         <span th:if="${role == 'teacher'}">
             <h1>Add New Teacher</h1>
         </span>
-        <span th:if="${role == 'student'}">
+                <span th:if="${role == 'student'}">
             <h1>Add New Student</h1>
         </span>
-      </div>
-      <div class="card-body">
-        <form th:action="@{/admin/users/addUser}" th:object="${user}" method="POST">
-          <input type="hidden" name="role" th:value="${role}"/>
-          <div class="form-group">
-            <label class="mb-1">Teacher Name</label>
-            <input type="text" th:field="*{firstName}" class="form-control mb-2" placeholder="Enter the name">
-
-            <label class="mb-1">Teacher Last Name</label>
-            <input type="text" th:field="*{secondName}" class="form-control mb-2" placeholder="Enter the second name">
-
-            <label class="mb-1">E-mail</label>
-            <input id="email" type="text" class="form-control mb-2" th:field="*{email}" placeholder="Enter the e-mail"
-                   required
-                   autofocus
-                   pattern="^[a-zA-Z0-9._-]+@(?:[a-zA-Z0-9-]+\.)+[a-zA-Z]{2,}$"
-                   title="Email should match next regex: email@email.ml">
-            <div class="invalid-feedback">
-              Email is invalid
             </div>
+            <div class="card-body">
+                <form th:action="@{/admin/users/addUser}" th:object="${user}" method="POST"
+                      enctype="multipart/form-data">
+                    <input type="hidden" name="role" th:value="${role}"/>
 
-            <label class="mb-1">Password</label>
-            <input id="password" type="password" class="form-control mb-2" th:field="*{password}" placeholder="Enter the password"
-                   min="8"
-                   max="24"
-                   required>
-            <div class="invalid-feedback">
-              Password is required
+                    <div class="form-group">
+                        <label class="mb-1">Name</label>
+                        <input type="text" th:field="*{firstName}" class="form-control mb-2"
+                               placeholder="Enter the name">
+                    </div>
+
+                    <div>
+                        <label class="mb-1">Last Name</label>
+                        <input type="text" th:field="*{secondName}" class="form-control mb-2"
+                               placeholder="Enter the second name">
+                    </div>
+
+                    <div>
+                        <label class="mb-1">E-mail</label>
+                        <input id="email" type="text" class="form-control mb-2" th:field="*{email}"
+                               placeholder="Enter the e-mail"
+                               required
+                               autofocus
+                               pattern="^[a-zA-Z0-9._-]+@(?:[a-zA-Z0-9-]+\.)+[a-zA-Z]{2,}$"
+                               title="Email should match next regex: email@email.ml">
+                        <div class="invalid-feedback">
+                            Email is invalid
+                        </div>
+                    </div>
+
+                    <div>
+                        <label class="mb-1">Password</label>
+                        <input id="password" type="password" class="form-control mb-2" th:field="*{password}"
+                               placeholder="Enter the password"
+                               min="8"
+                               max="24"
+                               required>
+                        <div class="invalid-feedback">
+                            Password is required
+                        </div>
+                    </div>
+
+                    <div>
+                        <label for="image">Photo:</label>
+                        <input type="file" id="image" name="image" class="form-control-file"
+                               accept="image/png, image/jpg, image/jpeg" th:field="*{image}">
+                    </div>
+
+                    <div class="footer-body">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
             </div>
-          </div>
-
-          <div class="footer-body">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </form>
-      </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
