--- a/src/main/resources/templates/administration/users/usersInfo.html
+++ b/src/main/resources/templates/administration/users/usersInfo.html
@@ -21,7 +21,7 @@
         crossorigin="anonymous"></script>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
+    <a class="navbar-brand ps-4 pe-4" href="/main-page">Electives</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -95,8 +95,8 @@
                        class="btn btn-danger me-2">Delete</a>
 
                     <form class="" th:action="@{/admin/setAccountStatus/{id}(id = ${user.id})}" method="post">
-                        <span th:if="${user.isBlocked == false}"><button type="submit" class="btn btn-primary me-2">Block</button></span>
                         <span th:if="${user.isBlocked == true}"><button type="submit" class="btn btn-primary me-2">Unlock</button></span>
+                        <span th:if="${user.isBlocked == false}"><button type="submit" class="btn btn-primary me-2">Block</button></span>
                     </form>
                 </td>
             </tr>
