--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -21,11 +21,13 @@
         crossorigin="anonymous"></script>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
+    <a class="navbar-brand ps-4 pe-4" href="/main-page">Electives</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    <a class="nav-link me-4" href="/main-page/teachers">Teachers</a>
+    <a class="nav-link me-4" href="/main-page/topics">Topics</a>
     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <div sec:authorize="isAuthenticated()">
@@ -79,11 +81,11 @@
                                 <form th:action="@{/assign}" method="POST">
                                     <input type="hidden" name="userId" th:value="${userId}">
                                     <input type="hidden" name="courseId" th:value="${course.idCourse}">
-                                    <span th:if="${course.assignable}"><button
-                                            class="btn btn-light me-2">You have joined this course!</button>
+                                    <span th:if="${course.assignable}">
+                                        <a class="btn btn-default me-2">You have joined this course!</a>
                                     </span>
-                                    <span th:unless="${course.assignable}"><button
-                                            type="submit" class="btn btn-success">Assign</button>
+                                    <span th:unless="${course.assignable}">
+                                        <button type="submit" class="btn btn-success">Assign</button>
                                     </span>
                                 </form>
                             </div>
