--- a/src/main/resources/templates/client/journal.html
+++ b/src/main/resources/templates/client/journal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <style>
         body {
-            margin-top: 20px;
+            margin-top: 0;
             background-color: #e2e8f0;
         }
 
@@ -53,7 +53,36 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
+    <a class="navbar-brand ps-4 pe-4" href="/main-page">Electives</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="nav-link me-4" th:href="@{/main-page/teachers}">Teachers</a>
+    <a class="nav-link me-4" th:href="@{/main-page/topics}">Topics</a>
+    <a class="nav-link me-4" th:href="@{'/main-page/profile?userId=' + ${userId}}">Profile</a>
+
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <div sec:authorize="isAuthenticated()">
+                <a class="nav-link me-2" th:href="@{/logout}">Log out</a>
+            </div>
+            <div class="d-flex flex-row" sec:authorize="isAnonymous()">
+                <a class="nav-link" th:href="@{/login}">Log in</a>
+                <a class="nav-link me-2" th:href="@{/register}">Sign up</a>
+            </div>
+        </ul>
+    </div>
+</nav>
 <div class="container">
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a th:href="@{/main-page}">Main Page</a></li>
+            <li class="breadcrumb-item"><a th:href="@{'/main-page/profile?userId=' + ${userId}}">Profile</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Journal</li>
+        </ol>
+    </nav>
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">Student Mark Journal</h5>
